# ODSE

./: .gitignore  Dockerfile  README.md  REQ.MD  __init__.py  client.py  env.py  example.py  graders.py  grpo.py  inference.py  models.py  openenv.yaml  pyproject.toml
core/: Dockerfile.sandbox  README.md  __init__.py  docker_executor.py  env.py  evaluator.py  example.py  executor.py  models.py  requirements.txt  reward.py  sandbox_runner.py
core/data/: __init__.py  data_manager.py  datasets.py  titanic_dirty.csv
core/docs/: architecture.md
core/tasks/: __init__.py  base_task.py  cleaning_task.py  feature_engineering_task.py  registry.py
odse_benchmark/: .dockerignore  .env.example  Dockerfile  README.md  grpo.py  requirements.txt  start_training.sh
server/: Dockerfile  __init__.py  app.py  odse_environment.py  requirements.txt
