# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odse"
version = "0.1.0"
description = "Odse environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "pydantic>2.0.0",
    "typing-extensions>=4.5.0",
    "docker>=6.0.0"
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "docker>=6.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m odse.server.app
server = "odse.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["odse", "odse.server"]
package-dir = { "odse" = ".", "odse.server" = "server" }